fix extra margin in project

--- a/src/Home.css
+++ b/src/Home.css
@@ -14,6 +14,14 @@
     --shadow-xl: 0 20px 40px rgba(0,0,0,0.15), 0 10px 10px rgba(0,0,0,0.05);
     --transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   }
+
+  * {
+    padding: 0;
+    margin: 0;
+    outline: none;
+    text-decoration: none;
+    box-sizing: border-box;
+}
   
   /* Base Styles */
   .home {
