--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,14 @@
   --gray: #94a3b8;
 }
 
+* {
+    padding: 0;
+    margin: 0;
+    outline: none;
+    text-decoration: none;
+    box-sizing: border-box;
+}
+
 /* Header Styles */
 .header {
   background-color: rgba(30, 41, 59, 0.9);
@@ -435,18 +443,31 @@
 
 .footer__contact-item {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
+  justify-items: center;
   gap: 0.75rem;
-  color: var(--text-muted);
-  font-size: 0.95rem;
   line-height: 1.5;
+  font-size: 0.95rem;
 }
 
 .footer__contact-icon {
-  flex-shrink: 0;
-  margin-top: 0.2rem;
   color: var(--primary-color);
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
+  padding: 0;
 }
+
+.footer__contact-item p {
+  margin: 0;
+  font-size: 0.95rem;
+  color: var(--text-muted);
+  text-transform: capitalize;
+}
+
 
 /* Copyright Section */
 .footer__copyright {
